# local-datasource

./: .gitignore  README.md  SKILL.md  config.yaml  pyproject.toml
demos/: connectivity_report.md  mcp_query_demo.py  test_data_connectivity.py
docs/superpowers/plans/: 2026-06-24-local-datasource-plan.md  2026-07-02-债券转债数据源.md  2026-07-02-金融输入归一化扩展.md
docs/superpowers/specs/: 2026-06-24-local-datasource-design.md  2026-07-02-债券转债数据源-design.md
src/local_datasource/: config.py  formatters.py  server.py
src/local_datasource/providers/: arxiv.py  bond.py  convertible_bond.py  stock.py  worldbank.py  yahoo.py
tests/: test_arxiv.py  test_bond.py  test_config.py  test_convertible_bond.py  test_formatters.py  test_server.py  test_stock.py  test_worldbank.py  test_yahoo.py
